basic creating and connecting to container working
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -24,6 +24,9 @@
       "path": "../../packages/debug"
     },
     {
+      "path": "../../packages/dev-container"
+    },
+    {
       "path": "../../packages/editor"
     },
     {
