--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -7,6 +7,7 @@
     "@theia/editor": "1.46.0",
     "@theia/filesystem": "1.46.0",
     "@theia/monaco": "1.46.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "uuid": "^8.3.2"
   },
   "publishConfig": {
