(fix) bundle-size: reuse ts helper functions from tslib instead of inlining

--- a/packages/typehierarchy/package.json
+++ b/packages/typehierarchy/package.json
@@ -6,6 +6,7 @@
     "@theia/core": "1.46.0",
     "@theia/editor": "1.46.0",
     "@types/uuid": "^7.0.3",
+    "tslib": "^2.6.2",
     "uuid": "^8.0.0"
   },
   "publishConfig": {
