--- a/packages/messages/package.json
+++ b/packages/messages/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@theia/core": "1.46.0",
     "react-perfect-scrollbar": "^1.5.3",
-    "ts-md5": "^1.2.2"
+    "ts-md5": "^1.2.2",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
