--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -68,6 +68,7 @@
     "safer-buffer": "^2.1.2",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
+    "tslib": "^2.6.2",
     "uuid": "^8.3.2",
     "vscode-languageserver-protocol": "^3.17.2",
     "vscode-uri": "^2.1.1",
