--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -19,7 +19,8 @@
     "@vscode/debugprotocol": "^1.51.0",
     "fast-deep-equal": "^3.1.3",
     "jsonc-parser": "^2.2.0",
-    "p-debounce": "^2.1.0"
+    "p-debounce": "^2.1.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
