--- a/packages/editor-preview/package.json
+++ b/packages/editor-preview/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@theia/core": "1.46.0",
     "@theia/editor": "1.46.0",
-    "@theia/navigator": "1.46.0"
+    "@theia/navigator": "1.46.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
