--- a/packages/file-search/package.json
+++ b/packages/file-search/package.json
@@ -8,7 +8,8 @@
     "@theia/filesystem": "1.46.0",
     "@theia/process": "1.46.0",
     "@theia/workspace": "1.46.0",
-    "@vscode/ripgrep": "^1.14.2"
+    "@vscode/ripgrep": "^1.14.2",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
