--- a/packages/getting-started/package.json
+++ b/packages/getting-started/package.json
@@ -8,7 +8,8 @@
     "@theia/filesystem": "1.46.0",
     "@theia/keymaps": "1.46.0",
     "@theia/preview": "1.46.0",
-    "@theia/workspace": "1.46.0"
+    "@theia/workspace": "1.46.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
