--- a/packages/git/package.json
+++ b/packages/git/package.json
@@ -21,7 +21,8 @@
     "node-ssh": "^12.0.1",
     "octicons": "^7.1.0",
     "p-queue": "^2.4.2",
-    "ts-md5": "^1.2.2"
+    "ts-md5": "^1.2.2",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
