--- a/packages/monaco/package.json
+++ b/packages/monaco/package.json
@@ -13,6 +13,7 @@
     "fast-plist": "^0.1.2",
     "idb": "^4.0.5",
     "jsonc-parser": "^2.2.0",
+    "tslib": "^2.6.2",
     "vscode-oniguruma": "1.6.1",
     "vscode-textmate": "^9.0.0"
   },
