--- a/packages/navigator/package.json
+++ b/packages/navigator/package.json
@@ -6,7 +6,8 @@
     "@theia/core": "1.46.0",
     "@theia/filesystem": "1.46.0",
     "@theia/workspace": "1.46.0",
-    "minimatch": "^5.1.0"
+    "minimatch": "^5.1.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
