--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -46,6 +46,7 @@
     "mime": "^2.4.4",
     "ps-tree": "^1.2.0",
     "semver": "^7.5.4",
+    "tslib": "^2.6.2",
     "uuid": "^8.0.0",
     "vhost": "^3.0.2",
     "vscode-textmate": "^9.0.0"
