--- a/packages/preferences/package.json
+++ b/packages/preferences/package.json
@@ -13,7 +13,8 @@
     "async-mutex": "^0.3.1",
     "fast-deep-equal": "^3.1.3",
     "jsonc-parser": "^2.2.0",
-    "p-debounce": "^2.1.0"
+    "p-debounce": "^2.1.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
