--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -10,7 +10,8 @@
     "@types/highlight.js": "^10.1.0",
     "@types/markdown-it-anchor": "^4.0.1",
     "highlight.js": "10.4.1",
-    "markdown-it-anchor": "~5.0.0"
+    "markdown-it-anchor": "~5.0.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
