--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -16,6 +16,7 @@
     "ssh2-sftp-client": "^9.1.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
+    "tslib": "^2.6.2",
     "uuid": "^8.0.0"
   },
   "publishConfig": {
