--- a/packages/scm-extra/package.json
+++ b/packages/scm-extra/package.json
@@ -7,7 +7,8 @@
     "@theia/editor": "1.46.0",
     "@theia/filesystem": "1.46.0",
     "@theia/navigator": "1.46.0",
-    "@theia/scm": "1.46.0"
+    "@theia/scm": "1.46.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
