--- a/packages/task/package.json
+++ b/packages/task/package.json
@@ -16,7 +16,8 @@
     "@theia/workspace": "1.46.0",
     "async-mutex": "^0.3.1",
     "jsonc-parser": "^2.2.0",
-    "p-debounce": "^2.1.0"
+    "p-debounce": "^2.1.0",
+    "tslib": "^2.6.2"
   },
   "publishConfig": {
     "access": "public"
