--- a/packages/toolbar/package.json
+++ b/packages/toolbar/package.json
@@ -38,7 +38,8 @@
     "@theia/workspace": "1.46.0",
     "ajv": "^6.5.3",
     "jsonc-parser": "^2.2.0",
-    "perfect-scrollbar": "^1.3.0"
+    "perfect-scrollbar": "^1.3.0",
+    "tslib": "^2.6.2"
   },
   "theiaExtensions": [
     {
