--- a/packages/vsx-registry/package.json
+++ b/packages/vsx-registry/package.json
@@ -13,6 +13,7 @@
     "luxon": "^2.4.0",
     "p-debounce": "^2.1.0",
     "semver": "^7.5.4",
+    "tslib": "^2.6.2",
     "uuid": "^8.0.0"
   },
   "publishConfig": {
