--- a/packages/workspace/package.json
+++ b/packages/workspace/package.json
@@ -7,6 +7,7 @@
     "@theia/filesystem": "1.46.0",
     "@theia/variable-resolver": "1.46.0",
     "jsonc-parser": "^2.2.0",
+    "tslib": "^2.6.2",
     "valid-filename": "^2.0.1"
   },
   "publishConfig": {
