--- a/packages/messages/package.json
+++ b/packages/messages/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@theia/messages",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Messages Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
+    "@theia/core": "1.46.1",
     "react-perfect-scrollbar": "^1.5.3",
     "ts-md5": "^1.2.2"
   },
@@ -40,9 +40,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
