--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@theia/metrics",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Metrics Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
+    "@theia/core": "1.46.1",
     "prom-client": "^10.2.0"
   },
   "publishConfig": {
@@ -40,9 +40,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
