--- a/packages/mini-browser/package.json
+++ b/packages/mini-browser/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@theia/mini-browser",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Mini-Browser Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/filesystem": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/filesystem": "1.46.1",
     "@types/mime-types": "^2.1.0",
     "mime-types": "^2.1.18",
     "pdfobject": "^2.0.201604172",
@@ -49,9 +49,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
