--- a/packages/secondary-window/package.json
+++ b/packages/secondary-window/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@theia/secondary-window",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Secondary Window Extension",
   "dependencies": {
-    "@theia/core": "1.46.0"
+    "@theia/core": "1.46.1"
   },
   "publishConfig": {
     "access": "public"
@@ -38,6 +38,7 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
-  }
+    "@theia/ext-scripts": "1.46.1"
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
