--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@theia/console",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Console Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/monaco": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/monaco": "1.46.1",
     "@theia/monaco-editor-core": "1.72.3",
     "anser": "^2.0.1"
   },
@@ -41,9 +41,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
