--- a/packages/editor-preview/package.json
+++ b/packages/editor-preview/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@theia/editor-preview",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Editor Preview Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/navigator": "1.46.0"
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/navigator": "1.46.1"
   },
   "publishConfig": {
     "access": "public"
@@ -40,9 +40,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
