--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theia/electron",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Electron utility package",
   "dependencies": {
     "electron-store": "^8.0.0",
@@ -8,8 +8,8 @@
     "native-keymap": "^2.2.1"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0",
-    "@theia/re-exports": "1.46.0"
+    "@theia/ext-scripts": "1.46.1",
+    "@theia/re-exports": "1.46.1"
   },
   "peerDependencies": {
     "electron": "^23.2.4"
@@ -59,5 +59,6 @@
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
