--- a/packages/external-terminal/package.json
+++ b/packages/external-terminal/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@theia/external-terminal",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - External Terminal Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/workspace": "1.46.0"
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/workspace": "1.46.1"
   },
   "publishConfig": {
     "access": "public"
@@ -41,9 +41,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
