--- a/packages/filesystem/package.json
+++ b/packages/filesystem/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@theia/filesystem",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - FileSystem Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
+    "@theia/core": "1.46.1",
     "@types/body-parser": "^1.17.0",
     "@types/multer": "^1.4.7",
     "@types/rimraf": "^2.0.2",
@@ -74,9 +74,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
