--- a/packages/getting-started/package.json
+++ b/packages/getting-started/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@theia/getting-started",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - GettingStarted Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/keymaps": "1.46.0",
-    "@theia/preview": "1.46.0",
-    "@theia/workspace": "1.46.0"
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/keymaps": "1.46.1",
+    "@theia/preview": "1.46.1",
+    "@theia/workspace": "1.46.1"
   },
   "publishConfig": {
     "access": "public"
@@ -44,9 +44,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
