--- a/packages/git/package.json
+++ b/packages/git/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@theia/git",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Git Integration",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/filesystem": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/filesystem": "1.46.1",
     "@theia/monaco-editor-core": "1.72.3",
-    "@theia/navigator": "1.46.0",
-    "@theia/scm": "1.46.0",
-    "@theia/scm-extra": "1.46.0",
-    "@theia/workspace": "1.46.0",
+    "@theia/navigator": "1.46.1",
+    "@theia/scm": "1.46.1",
+    "@theia/scm-extra": "1.46.1",
+    "@theia/workspace": "1.46.1",
     "@types/diff": "^3.2.2",
     "@types/p-queue": "^2.3.1",
     "diff": "^3.4.0",
@@ -66,11 +66,12 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0",
+    "@theia/ext-scripts": "1.46.1",
     "@types/luxon": "^2.3.2",
     "upath": "^1.0.2"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
