--- a/packages/keymaps/package.json
+++ b/packages/keymaps/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@theia/keymaps",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Custom Keymaps Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/monaco": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/monaco": "1.46.1",
     "@theia/monaco-editor-core": "1.72.3",
-    "@theia/preferences": "1.46.0",
-    "@theia/userstorage": "1.46.0",
+    "@theia/preferences": "1.46.1",
+    "@theia/userstorage": "1.46.1",
     "jsonc-parser": "^2.2.0"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "publishConfig": {
     "access": "public"
@@ -47,5 +47,6 @@
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
