--- a/packages/memory-inspector/package.json
+++ b/packages/memory-inspector/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theia/memory-inspector",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Memory Inspector",
   "keywords": [
     "theia-extension"
@@ -27,8 +27,8 @@
     "watch": "theiaext watch"
   },
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/debug": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/debug": "1.46.1",
     "@vscode/debugprotocol": "^1.51.0",
     "long": "^4.0.0"
   },
@@ -42,5 +42,6 @@
   ],
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
