--- a/packages/monaco/package.json
+++ b/packages/monaco/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@theia/monaco",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Monaco Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/markers": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/markers": "1.46.1",
     "@theia/monaco-editor-core": "1.72.3",
-    "@theia/outline-view": "1.46.0",
-    "@theia/workspace": "1.46.0",
+    "@theia/outline-view": "1.46.1",
+    "@theia/workspace": "1.46.1",
     "fast-plist": "^0.1.2",
     "idb": "^4.0.5",
     "jsonc-parser": "^2.2.0",
@@ -50,9 +50,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
