--- a/packages/navigator/package.json
+++ b/packages/navigator/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@theia/navigator",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Navigator Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/workspace": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/workspace": "1.46.1",
     "minimatch": "^5.1.0"
   },
   "publishConfig": {
@@ -44,9 +44,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
