--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@theia/notebook",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Notebook Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/monaco": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/monaco": "1.46.1",
     "uuid": "^8.3.2"
   },
   "publishConfig": {
@@ -42,10 +42,11 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0",
+    "@theia/ext-scripts": "1.46.1",
     "@types/vscode-notebook-renderer": "^1.72.0"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
