--- a/packages/outline-view/package.json
+++ b/packages/outline-view/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@theia/outline-view",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Outline View Extension",
   "dependencies": {
-    "@theia/core": "1.46.0"
+    "@theia/core": "1.46.1"
   },
   "publishConfig": {
     "access": "public"
@@ -38,9 +38,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
