--- a/packages/plugin-ext-vscode/package.json
+++ b/packages/plugin-ext-vscode/package.json
@@ -1,21 +1,21 @@
 {
   "name": "@theia/plugin-ext-vscode",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Plugin Extension for VsCode",
   "dependencies": {
-    "@theia/callhierarchy": "1.46.0",
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/monaco": "1.46.0",
+    "@theia/callhierarchy": "1.46.1",
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/monaco": "1.46.1",
     "@theia/monaco-editor-core": "1.72.3",
-    "@theia/navigator": "1.46.0",
-    "@theia/plugin": "1.46.0",
-    "@theia/plugin-ext": "1.46.0",
-    "@theia/terminal": "1.46.0",
-    "@theia/typehierarchy": "1.46.0",
-    "@theia/userstorage": "1.46.0",
-    "@theia/workspace": "1.46.0",
+    "@theia/navigator": "1.46.1",
+    "@theia/plugin": "1.46.1",
+    "@theia/plugin-ext": "1.46.1",
+    "@theia/terminal": "1.46.1",
+    "@theia/typehierarchy": "1.46.1",
+    "@theia/userstorage": "1.46.1",
+    "@theia/workspace": "1.46.1",
     "decompress": "^4.2.1",
     "filenamify": "^4.1.0"
   },
@@ -53,9 +53,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
