--- a/packages/plugin-metrics/package.json
+++ b/packages/plugin-metrics/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@theia/plugin-metrics",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Plugin Metrics",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/metrics": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/metrics": "1.46.1",
     "@theia/monaco-editor-core": "1.72.3",
-    "@theia/plugin": "1.46.0",
-    "@theia/plugin-ext": "1.46.0"
+    "@theia/plugin": "1.46.1",
+    "@theia/plugin-ext": "1.46.1"
   },
   "publishConfig": {
     "access": "public"
@@ -43,9 +43,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
