--- a/packages/preferences/package.json
+++ b/packages/preferences/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@theia/preferences",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Preferences Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/monaco": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/monaco": "1.46.1",
     "@theia/monaco-editor-core": "1.72.3",
-    "@theia/userstorage": "1.46.0",
-    "@theia/workspace": "1.46.0",
+    "@theia/userstorage": "1.46.1",
+    "@theia/workspace": "1.46.1",
     "async-mutex": "^0.3.1",
     "fast-deep-equal": "^3.1.3",
     "jsonc-parser": "^2.2.0",
@@ -48,9 +48,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
