--- a/packages/process/package.json
+++ b/packages/process/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@theia/process",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia process support.",
   "dependencies": {
-    "@theia/core": "1.46.0",
+    "@theia/core": "1.46.1",
     "node-pty": "0.11.0-beta17",
     "string-argv": "^0.1.1"
   },
@@ -44,9 +44,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
