--- a/packages/remote/package.json
+++ b/packages/remote/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@theia/remote",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Remote",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/filesystem": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/filesystem": "1.46.1",
     "archiver": "^5.3.1",
     "decompress": "^4.2.1",
     "decompress-tar": "^4.0.0",
@@ -12,10 +12,10 @@
     "decompress-unzip": "^4.0.1",
     "express-http-proxy": "^1.6.3",
     "glob": "^8.1.0",
-    "ssh2": "^1.12.0",
-    "ssh2-sftp-client": "^9.1.0",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
+    "ssh2": "^1.12.0",
+    "ssh2-sftp-client": "^9.1.0",
     "uuid": "^8.0.0"
   },
   "publishConfig": {
@@ -52,7 +52,7 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0",
+    "@theia/ext-scripts": "1.46.1",
     "@types/archiver": "^5.3.2",
     "@types/decompress": "^4.2.4",
     "@types/express-http-proxy": "^1.6.3",
@@ -62,5 +62,6 @@
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
