--- a/packages/scm-extra/package.json
+++ b/packages/scm-extra/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@theia/scm-extra",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Source control extras Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/navigator": "1.46.0",
-    "@theia/scm": "1.46.0"
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/navigator": "1.46.1",
+    "@theia/scm": "1.46.1"
   },
   "publishConfig": {
     "access": "public"
@@ -42,9 +42,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
