--- a/packages/task/package.json
+++ b/packages/task/package.json
@@ -1,19 +1,19 @@
 {
   "name": "@theia/task",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Task extension. This extension adds support for executing raw or terminal processes in the backend.",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/markers": "1.46.0",
-    "@theia/monaco": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/markers": "1.46.1",
+    "@theia/monaco": "1.46.1",
     "@theia/monaco-editor-core": "1.72.3",
-    "@theia/process": "1.46.0",
-    "@theia/terminal": "1.46.0",
-    "@theia/userstorage": "1.46.0",
-    "@theia/variable-resolver": "1.46.0",
-    "@theia/workspace": "1.46.0",
+    "@theia/process": "1.46.1",
+    "@theia/terminal": "1.46.1",
+    "@theia/userstorage": "1.46.1",
+    "@theia/variable-resolver": "1.46.1",
+    "@theia/workspace": "1.46.1",
     "async-mutex": "^0.3.1",
     "jsonc-parser": "^2.2.0",
     "p-debounce": "^2.1.0"
@@ -52,9 +52,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
