--- a/packages/terminal/package.json
+++ b/packages/terminal/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@theia/terminal",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Terminal Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/process": "1.46.0",
-    "@theia/variable-resolver": "1.46.0",
-    "@theia/workspace": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/process": "1.46.1",
+    "@theia/variable-resolver": "1.46.1",
+    "@theia/workspace": "1.46.1",
     "xterm": "^4.16.0",
     "xterm-addon-fit": "^0.5.0",
     "xterm-addon-search": "^0.8.2"
@@ -48,9 +48,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
