--- a/packages/toolbar/package.json
+++ b/packages/toolbar/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@theia/toolbar",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Toolbar",
   "keywords": [
     "theia-extension"
@@ -27,15 +27,15 @@
     "watch": "theiaext watch"
   },
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/editor": "1.46.0",
-    "@theia/file-search": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/monaco": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/editor": "1.46.1",
+    "@theia/file-search": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/monaco": "1.46.1",
     "@theia/monaco-editor-core": "1.72.3",
-    "@theia/search-in-workspace": "1.46.0",
-    "@theia/userstorage": "1.46.0",
-    "@theia/workspace": "1.46.0",
+    "@theia/search-in-workspace": "1.46.1",
+    "@theia/userstorage": "1.46.1",
+    "@theia/workspace": "1.46.1",
     "ajv": "^6.5.3",
     "jsonc-parser": "^2.2.0",
     "perfect-scrollbar": "^1.3.0"
@@ -47,5 +47,6 @@
   ],
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
