--- a/packages/vsx-registry/package.json
+++ b/packages/vsx-registry/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@theia/vsx-registry",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - VSX Registry",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/ovsx-client": "1.46.0",
-    "@theia/plugin-ext": "1.46.0",
-    "@theia/plugin-ext-vscode": "1.46.0",
-    "@theia/preferences": "1.46.0",
-    "@theia/workspace": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/ovsx-client": "1.46.1",
+    "@theia/plugin-ext": "1.46.1",
+    "@theia/plugin-ext-vscode": "1.46.1",
+    "@theia/preferences": "1.46.1",
+    "@theia/workspace": "1.46.1",
     "luxon": "^2.4.0",
     "p-debounce": "^2.1.0",
     "semver": "^7.5.4",
@@ -53,10 +53,11 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0",
+    "@theia/ext-scripts": "1.46.1",
     "@types/luxon": "^2.3.2"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "fb7722e8d90d9d4771e7ba1c5b04383ed560fcd9"
 }
