--- a/packages/workspace/package.json
+++ b/packages/workspace/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@theia/workspace",
-  "version": "1.46.0",
+  "version": "1.46.1",
   "description": "Theia - Workspace Extension",
   "dependencies": {
-    "@theia/core": "1.46.0",
-    "@theia/filesystem": "1.46.0",
-    "@theia/variable-resolver": "1.46.0",
+    "@theia/core": "1.46.1",
+    "@theia/filesystem": "1.46.1",
+    "@theia/variable-resolver": "1.46.1",
     "jsonc-parser": "^2.2.0",
     "valid-filename": "^2.0.1"
   },
@@ -46,9 +46,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.46.0"
+    "@theia/ext-scripts": "1.46.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "1799210a8fba6eb81e2ddaf66f09d6fa071df012"
 }
