electron: allow accessing the metrics endpoint for performance analysis
By default, when running Theia in Electron, all endpoints are protected
by the ElectronTokenValidator.
This patch allows accessing the '/metrics' endpoint without a token,
which enables us to collect metrics for performance analysis.

For this, ElectronTokenValidator is extended to allow access to the
metrics endpoint. All other endpoints are still protected.

Contributed on behalf of STMicroelectronics

Signed-off-by: Olaf Lessenich <olessenich@eclipsesource.com>

--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -14,6 +14,9 @@
     {
       "frontend": "lib/browser/metrics-frontend-module",
       "backend": "lib/node/metrics-backend-module"
+    },
+    {
+      "backendElectron": "lib/electron-node/electron-metrics-backend-module"
     }
   ],
   "keywords": [
