Add secondary window support for text editors
- moves hard-coded support for webviews in secondary
windows into the webviews support
- introduces patch-package as a way to manage Phosphor patches
- fixes the context menu support in secondary windows

fixes #13163, #12722

contributed on behalf of STMicroelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-gyp": "^9.0.0",
     "nsfw": "^2.2.4",
     "nyc": "^15.0.0",
+    "patch-package": "^8.0.0",
     "puppeteer": "19.7.2",
     "puppeteer-core": "19.7.2",
     "puppeteer-to-istanbul": "1.4.0",
@@ -77,6 +78,7 @@
     "lint:clean": "rimraf .eslintcache",
     "lint:oneshot": "node --max-old-space-size=4096 node_modules/eslint/bin/eslint.js --cache=true \"{dev-packages,packages,examples}/**/*.{ts,tsx}\"",
     "preinstall": "node-gyp install",
+    "postinstall": "patch-package",
     "prepare": "yarn -s compile:references && lerna run prepare && yarn -s compile",
     "publish:latest": "lerna publish --exact --yes --no-push",
     "publish:next": "lerna publish preminor --exact --canary --preid next --dist-tag next --no-git-reset --no-git-tag-version --no-push --yes && yarn -s publish:check",
