--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -28,6 +28,7 @@
   "theiaExtensions": [
     {
       "frontend": "lib/browser/debug-frontend-module",
+      "secondaryWindow": "lib/browser/debug-frontend-module",
       "backend": "lib/node/debug-backend-module"
     }
   ],
