--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -12,7 +12,8 @@
   },
   "theiaExtensions": [
     {
-      "frontend": "lib/browser/editor-frontend-module"
+      "frontend": "lib/browser/editor-frontend-module",
+      "secondaryWindow": "lib/browser/editor-frontend-module"
     }
   ],
   "keywords": [
