--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/route-parser": "^0.1.1",
     "@types/safer-buffer": "^2.1.0",
+    "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.5",
     "@types/yargs": "^15",
     "@vscode/codicons": "*",
@@ -68,6 +69,7 @@
     "safer-buffer": "^2.1.2",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
+    "uuid": "^9.0.1",
     "vscode-languageserver-protocol": "^3.17.2",
     "vscode-uri": "^2.1.1",
     "ws": "^8.14.1",
