--- a/packages/callhierarchy/package.json
+++ b/packages/callhierarchy/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@theia/callhierarchy",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Call Hierarchy Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/editor": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/editor": "1.47.1",
     "ts-md5": "^1.2.2",
     "tslib": "^2.6.2"
   },
@@ -41,9 +41,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
