--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@theia/console",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Console Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/monaco": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/monaco": "1.47.1",
     "@theia/monaco-editor-core": "1.83.101",
     "anser": "^2.0.1",
     "tslib": "^2.6.2"
@@ -42,9 +42,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
