--- a/packages/debug/package.json
+++ b/packages/debug/package.json
@@ -1,21 +1,21 @@
 {
   "name": "@theia/debug",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Debug Extension",
   "dependencies": {
-    "@theia/console": "1.47.0",
-    "@theia/core": "1.47.0",
-    "@theia/editor": "1.47.0",
-    "@theia/filesystem": "1.47.0",
-    "@theia/markers": "1.47.0",
-    "@theia/monaco": "1.47.0",
+    "@theia/console": "1.47.1",
+    "@theia/core": "1.47.1",
+    "@theia/editor": "1.47.1",
+    "@theia/filesystem": "1.47.1",
+    "@theia/markers": "1.47.1",
+    "@theia/monaco": "1.47.1",
     "@theia/monaco-editor-core": "1.83.101",
-    "@theia/output": "1.47.0",
-    "@theia/process": "1.47.0",
-    "@theia/task": "1.47.0",
-    "@theia/terminal": "1.47.0",
-    "@theia/variable-resolver": "1.47.0",
-    "@theia/workspace": "1.47.0",
+    "@theia/output": "1.47.1",
+    "@theia/process": "1.47.1",
+    "@theia/task": "1.47.1",
+    "@theia/terminal": "1.47.1",
+    "@theia/variable-resolver": "1.47.1",
+    "@theia/workspace": "1.47.1",
     "@vscode/debugprotocol": "^1.51.0",
     "fast-deep-equal": "^3.1.3",
     "jsonc-parser": "^2.2.0",
@@ -57,9 +57,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
