--- a/packages/editor-preview/package.json
+++ b/packages/editor-preview/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@theia/editor-preview",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Editor Preview Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/editor": "1.47.0",
-    "@theia/navigator": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/editor": "1.47.1",
+    "@theia/navigator": "1.47.1",
     "tslib": "^2.6.2"
   },
   "publishConfig": {
@@ -41,9 +41,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
