--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@theia/editor",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Editor Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/variable-resolver": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/variable-resolver": "1.47.1",
     "tslib": "^2.6.2"
   },
   "publishConfig": {
@@ -40,9 +40,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
