--- a/packages/file-search/package.json
+++ b/packages/file-search/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@theia/file-search",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - File Search Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/editor": "1.47.0",
-    "@theia/filesystem": "1.47.0",
-    "@theia/process": "1.47.0",
-    "@theia/workspace": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/editor": "1.47.1",
+    "@theia/filesystem": "1.47.1",
+    "@theia/process": "1.47.1",
+    "@theia/workspace": "1.47.1",
     "@vscode/ripgrep": "^1.14.2",
     "tslib": "^2.6.2"
   },
@@ -45,9 +45,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
