--- a/packages/filesystem/package.json
+++ b/packages/filesystem/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@theia/filesystem",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - FileSystem Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
+    "@theia/core": "1.47.1",
     "@types/body-parser": "^1.17.0",
     "@types/multer": "^1.4.7",
     "@types/rimraf": "^2.0.2",
@@ -73,9 +73,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
