--- a/packages/getting-started/package.json
+++ b/packages/getting-started/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@theia/getting-started",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - GettingStarted Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/editor": "1.47.0",
-    "@theia/filesystem": "1.47.0",
-    "@theia/keymaps": "1.47.0",
-    "@theia/preview": "1.47.0",
-    "@theia/workspace": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/editor": "1.47.1",
+    "@theia/filesystem": "1.47.1",
+    "@theia/keymaps": "1.47.1",
+    "@theia/preview": "1.47.1",
+    "@theia/workspace": "1.47.1",
     "tslib": "^2.6.2"
   },
   "publishConfig": {
@@ -45,9 +45,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
