--- a/packages/metrics/package.json
+++ b/packages/metrics/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@theia/metrics",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Metrics Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
+    "@theia/core": "1.47.1",
     "prom-client": "^10.2.0",
     "tslib": "^2.6.2"
   },
@@ -41,9 +41,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
