--- a/packages/outline-view/package.json
+++ b/packages/outline-view/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@theia/outline-view",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Outline View Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
+    "@theia/core": "1.47.1",
     "tslib": "^2.6.2"
   },
   "publishConfig": {
@@ -39,9 +39,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
