--- a/packages/output/package.json
+++ b/packages/output/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@theia/output",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Output Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/editor": "1.47.0",
-    "@theia/monaco": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/editor": "1.47.1",
+    "@theia/monaco": "1.47.1",
     "@theia/monaco-editor-core": "1.83.101",
     "@types/p-queue": "^2.3.1",
     "p-queue": "^2.4.2",
@@ -44,9 +44,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
