--- a/packages/plugin-ext-headless/package.json
+++ b/packages/plugin-ext-headless/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@theia/plugin-ext-headless",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Headless (Backend-only) Plugin Extension",
   "main": "lib/common/index.js",
   "typings": "lib/common/index.d.ts",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/plugin-ext": "1.47.0",
-    "@theia/terminal": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/plugin-ext": "1.47.1",
+    "@theia/terminal": "1.47.1",
     "tslib": "^2.6.2"
   },
   "publishConfig": {
@@ -44,7 +44,7 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0",
+    "@theia/ext-scripts": "1.47.1",
     "@types/decompress": "^4.2.2",
     "@types/escape-html": "^0.0.20",
     "@types/lodash.clonedeep": "^4.5.3",
@@ -52,5 +52,6 @@
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
