--- a/packages/plugin-ext/package.json
+++ b/packages/plugin-ext/package.json
@@ -1,37 +1,37 @@
 {
   "name": "@theia/plugin-ext",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Plugin Extension",
   "main": "lib/common/index.js",
   "typings": "lib/common/index.d.ts",
   "dependencies": {
-    "@theia/bulk-edit": "1.47.0",
-    "@theia/callhierarchy": "1.47.0",
-    "@theia/console": "1.47.0",
-    "@theia/core": "1.47.0",
-    "@theia/debug": "1.47.0",
-    "@theia/editor": "1.47.0",
-    "@theia/editor-preview": "1.47.0",
-    "@theia/file-search": "1.47.0",
-    "@theia/filesystem": "1.47.0",
-    "@theia/markers": "1.47.0",
-    "@theia/messages": "1.47.0",
-    "@theia/monaco": "1.47.0",
+    "@theia/bulk-edit": "1.47.1",
+    "@theia/callhierarchy": "1.47.1",
+    "@theia/console": "1.47.1",
+    "@theia/core": "1.47.1",
+    "@theia/debug": "1.47.1",
+    "@theia/editor": "1.47.1",
+    "@theia/editor-preview": "1.47.1",
+    "@theia/file-search": "1.47.1",
+    "@theia/filesystem": "1.47.1",
+    "@theia/markers": "1.47.1",
+    "@theia/messages": "1.47.1",
+    "@theia/monaco": "1.47.1",
     "@theia/monaco-editor-core": "1.83.101",
-    "@theia/navigator": "1.47.0",
-    "@theia/notebook": "1.47.0",
-    "@theia/output": "1.47.0",
-    "@theia/plugin": "1.47.0",
-    "@theia/preferences": "1.47.0",
-    "@theia/scm": "1.47.0",
-    "@theia/search-in-workspace": "1.47.0",
-    "@theia/task": "1.47.0",
-    "@theia/terminal": "1.47.0",
-    "@theia/timeline": "1.47.0",
-    "@theia/typehierarchy": "1.47.0",
-    "@theia/variable-resolver": "1.47.0",
-    "@theia/workspace": "1.47.0",
-    "@theia/test": "1.47.0",
+    "@theia/navigator": "1.47.1",
+    "@theia/notebook": "1.47.1",
+    "@theia/output": "1.47.1",
+    "@theia/plugin": "1.47.1",
+    "@theia/preferences": "1.47.1",
+    "@theia/scm": "1.47.1",
+    "@theia/search-in-workspace": "1.47.1",
+    "@theia/task": "1.47.1",
+    "@theia/terminal": "1.47.1",
+    "@theia/test": "1.47.1",
+    "@theia/timeline": "1.47.1",
+    "@theia/typehierarchy": "1.47.1",
+    "@theia/variable-resolver": "1.47.1",
+    "@theia/workspace": "1.47.1",
     "@types/mime": "^2.0.1",
     "@vscode/debugprotocol": "^1.51.0",
     "@vscode/proxy-agent": "^0.13.2",
@@ -88,7 +88,7 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0",
+    "@theia/ext-scripts": "1.47.1",
     "@types/decompress": "^4.2.2",
     "@types/escape-html": "^0.0.20",
     "@types/lodash.clonedeep": "^4.5.3",
@@ -96,5 +96,6 @@
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
