--- a/packages/plugin-metrics/package.json
+++ b/packages/plugin-metrics/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@theia/plugin-metrics",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Plugin Metrics",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/metrics": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/metrics": "1.47.1",
     "@theia/monaco-editor-core": "1.83.101",
-    "@theia/plugin": "1.47.0",
-    "@theia/plugin-ext": "1.47.0",
+    "@theia/plugin": "1.47.1",
+    "@theia/plugin-ext": "1.47.1",
     "tslib": "^2.6.2"
   },
   "publishConfig": {
@@ -44,9 +44,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
