--- a/packages/preferences/package.json
+++ b/packages/preferences/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@theia/preferences",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Preferences Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/editor": "1.47.0",
-    "@theia/filesystem": "1.47.0",
-    "@theia/monaco": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/editor": "1.47.1",
+    "@theia/filesystem": "1.47.1",
+    "@theia/monaco": "1.47.1",
     "@theia/monaco-editor-core": "1.83.101",
-    "@theia/userstorage": "1.47.0",
-    "@theia/workspace": "1.47.0",
+    "@theia/userstorage": "1.47.1",
+    "@theia/workspace": "1.47.1",
     "async-mutex": "^0.3.1",
     "fast-deep-equal": "^3.1.3",
     "jsonc-parser": "^2.2.0",
@@ -49,9 +49,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
