--- a/packages/preview/package.json
+++ b/packages/preview/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@theia/preview",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Preview Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/editor": "1.47.0",
-    "@theia/mini-browser": "1.47.0",
-    "@theia/monaco": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/editor": "1.47.1",
+    "@theia/mini-browser": "1.47.1",
+    "@theia/monaco": "1.47.1",
     "@types/highlight.js": "^10.1.0",
     "@types/markdown-it-anchor": "^4.0.1",
     "highlight.js": "10.4.1",
@@ -46,9 +46,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
