--- a/packages/scm-extra/package.json
+++ b/packages/scm-extra/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@theia/scm-extra",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Source control extras Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/editor": "1.47.0",
-    "@theia/filesystem": "1.47.0",
-    "@theia/navigator": "1.47.0",
-    "@theia/scm": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/editor": "1.47.1",
+    "@theia/filesystem": "1.47.1",
+    "@theia/navigator": "1.47.1",
+    "@theia/scm": "1.47.1",
     "tslib": "^2.6.2"
   },
   "publishConfig": {
@@ -43,9 +43,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
