--- a/packages/terminal/package.json
+++ b/packages/terminal/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@theia/terminal",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Terminal Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/editor": "1.47.0",
-    "@theia/filesystem": "1.47.0",
-    "@theia/process": "1.47.0",
-    "@theia/variable-resolver": "1.47.0",
-    "@theia/workspace": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/editor": "1.47.1",
+    "@theia/filesystem": "1.47.1",
+    "@theia/process": "1.47.1",
+    "@theia/variable-resolver": "1.47.1",
+    "@theia/workspace": "1.47.1",
     "tslib": "^2.6.2",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
@@ -49,9 +49,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
