--- a/packages/workspace/package.json
+++ b/packages/workspace/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@theia/workspace",
-  "version": "1.47.0",
+  "version": "1.47.1",
   "description": "Theia - Workspace Extension",
   "dependencies": {
-    "@theia/core": "1.47.0",
-    "@theia/filesystem": "1.47.0",
-    "@theia/variable-resolver": "1.47.0",
+    "@theia/core": "1.47.1",
+    "@theia/filesystem": "1.47.1",
+    "@theia/variable-resolver": "1.47.1",
     "jsonc-parser": "^2.2.0",
     "tslib": "^2.6.2",
     "valid-filename": "^2.0.1"
@@ -47,9 +47,10 @@
     "watch": "theiaext watch"
   },
   "devDependencies": {
-    "@theia/ext-scripts": "1.47.0"
+    "@theia/ext-scripts": "1.47.1"
   },
   "nyc": {
     "extends": "../../configs/nyc.json"
-  }
+  },
+  "gitHead": "ddc29054061700e54fe819f147a7ec335a6d8037"
 }
