feat: splash screen support for Electron
Enhances the ElectronMainApplication to optionally render a splash
screen until the frontend is ready.

The splash screen can be configured via the application config object
"theia.frontend.config.electron.splashScreenOptions". Mandatory is the
option "content" which specifies a relative path from the application
root to the content of the splash screen. Optionally "width", "height",
"minDuration" and "maxDuration" can be handed over too.

Configures the Electron example application to show a Theia logo splash
screen.

Implements #13410

Contributed on behalf of Pragmatiqu IT GmbH

--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -10,7 +10,13 @@
     "frontend": {
       "config": {
         "applicationName": "Theia Electron Example",
-        "reloadOnReconnect": true
+        "reloadOnReconnect": true,
+        "electron": {
+          "splashScreenOptions": {
+            "content": "resources/theia-logo.svg",
+            "height": 90
+          }
+        }
       }
     },
     "backend": {
