Addressing more review comments.
Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -1,5 +1,6 @@
 {
-   "editor.insertSpaces": true,
+  "editor.formatOnSave": true,
+  "editor.insertSpaces": true,
   "[typescript]": {
     "editor.tabSize": 4
   },
