feat: add simple ai integration
- add ui
- add openai integration

--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -9,6 +9,12 @@
       "path": "../../dev-packages/cli"
     },
     {
+      "path": "../../packages/ai-chat"
+    },
+    {
+      "path": "../../packages/ai-openai"
+    },
+    {
       "path": "../../packages/bulk-edit"
     },
     {
