--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,6 +55,12 @@
       "path": "examples/playwright"
     },
     {
+      "path": "packages/ai-chat"
+    },
+    {
+      "path": "packages/ai-openai"
+    },
+    {
       "path": "packages/bulk-edit"
     },
     {
