--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -20,6 +20,8 @@
     }
   },
   "dependencies": {
+    "@theia/ai-chat": "1.49.0",
+    "@theia/ai-openai": "1.49.0",
     "@theia/api-provider-sample": "1.49.0",
     "@theia/api-samples": "1.49.0",
     "@theia/bulk-edit": "1.49.0",
