use view collumn service and removed workaround
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/plugin-ext/tsconfig.json
+++ b/packages/plugin-ext/tsconfig.json
@@ -11,7 +11,8 @@
     ]
   },
   "include": [
-    "src"
+    "src",
+    "../core/src/browser/shell/view-column-service.ts"
   ],
   "references": [
     {
