feat: refactor modelprovider
- introduce ChatResponseParts
- LanguageModelProvider can be used in both backend and frontend
  - frontend access is generically implemented independent of the
    actual LanguageModelProvider implementation
- split code into four packages:
  - ai-agent: containing the AgentDispatcher. At the moment just
    delegates to the LanguageModelProvider. Can run in both frontend
    and backend
  - ai-chat: only containing the UI part of the chat.
  - ai-model-provider: containing the infrastructure of the
    LanguageModelProvider and its frontend bridge
  - ai-openao: only contains the Open AI LanguageModelProvider

--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -20,7 +20,9 @@
     }
   },
   "dependencies": {
+    "@theia/ai-agent": "1.49.0",
     "@theia/ai-chat": "1.49.0",
+    "@theia/ai-model-provider": "1.49.0",
     "@theia/ai-openai": "1.49.0",
     "@theia/api-provider-sample": "1.49.0",
     "@theia/api-samples": "1.49.0",
