--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -9,7 +9,13 @@
       "path": "../../dev-packages/cli"
     },
     {
+      "path": "../../packages/ai-agent"
+    },
+    {
       "path": "../../packages/ai-chat"
+    },
+    {
+      "path": "../../packages/ai-model-provider"
     },
     {
       "path": "../../packages/ai-openai"
