--- a/packages/ai-chat/package.json
+++ b/packages/ai-chat/package.json
@@ -3,6 +3,8 @@
   "version": "1.49.0",
   "description": "Theia - AI Chat Extension",
   "dependencies": {
+    "@theia/ai-agent": "1.49.0",
+    "@theia/ai-model-provider": "1.49.0",
     "@theia/core": "1.49.0",
     "@theia/filesystem": "1.49.0",
     "@theia/workspace": "1.49.0",
@@ -15,9 +17,6 @@
   "theiaExtensions": [
     {
       "frontend": "lib/browser/aichat-frontend-module"
-    },
-    {
-      "backend": "lib/node/aichat-backend-module"
     }
   ],
   "keywords": [
