--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,7 +55,13 @@
       "path": "examples/playwright"
     },
     {
+      "path": "packages/ai-agent"
+    },
+    {
       "path": "packages/ai-chat"
+    },
+    {
+      "path": "packages/ai-model-provider"
     },
     {
       "path": "packages/ai-openai"
