--- a/packages/scm/package.json
+++ b/packages/scm/package.json
@@ -8,8 +8,8 @@
     "@theia/filesystem": "1.50.0",
     "@theia/monaco": "1.50.0",
     "@theia/monaco-editor-core": "1.83.101",
-    "@types/diff": "^3.2.2",
-    "diff": "^3.4.0",
+    "@types/diff": "^5.2.1",
+    "diff": "^5.2.0",
     "p-debounce": "^2.1.0",
     "react-autosize-textarea": "^7.0.0",
     "ts-md5": "^1.2.2",
@@ -45,6 +45,7 @@
     "compile": "theiaext compile",
     "docs": "theiaext docs",
     "lint": "theiaext lint",
+    "test": "theiaext test",
     "watch": "theiaext watch"
   },
   "devDependencies": {
