Enable browser tests on all platforms
fixes #13764

Contributed on behalf of STMicroelectronics

Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -105,7 +105,7 @@ jobs:
           yarn test:theia
 
       - name: Test (browser)
-        if: matrix.tests != 'skip' && runner.os == 'Linux'
+        if: matrix.tests != 'skip'
         run: |
           xvfb-run -a yarn browser test
 
