Remove xvfb-run.
Signed-off-by: Thomas Mäder <t.s.maeder@gmail.com>

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -107,7 +107,7 @@ jobs:
       - name: Test (browser)
         if: matrix.tests != 'skip'
         run: |
-          xvfb-run -a yarn browser test
+          yarn browser test
 
       - name: Test (electron)
         if: matrix.tests != 'skip' && runner.os == 'Linux'
