--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -12,7 +12,7 @@
       "path": "../../packages/ai-agent"
     },
     {
-      "path": "../../packages/ai-chat"
+      "path": "../../packages/ai-chat-ui"
     },
     {
       "path": "../../packages/ai-model-provider"
