--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,7 +58,7 @@
       "path": "packages/ai-agent"
     },
     {
-      "path": "packages/ai-chat"
+      "path": "packages/ai-chat-ui"
     },
     {
       "path": "packages/ai-model-provider"
