--- a/examples/browser-only/package.json
+++ b/examples/browser-only/package.json
@@ -15,6 +15,10 @@
     }
   },
   "dependencies": {
+    "@theia/ai-chat": "1.49.0",
+    "@theia/ai-chat-ui": "1.49.0",
+    "@theia/ai-model-provider": "1.49.0",
+    "@theia/ai-openai": "1.49.0",
     "@theia/api-samples": "1.49.0",
     "@theia/bulk-edit": "1.49.0",
     "@theia/callhierarchy": "1.49.0",
