--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -20,7 +20,7 @@
     }
   },
   "dependencies": {
-    "@theia/ai-agent": "1.49.0",
+    "@theia/ai-chat": "1.49.0",
     "@theia/ai-chat-ui": "1.49.0",
     "@theia/ai-model-provider": "1.49.0",
     "@theia/ai-openai": "1.49.0",
