--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,7 +55,7 @@
       "path": "examples/playwright"
     },
     {
-      "path": "packages/ai-agent"
+      "path": "packages/ai-chat"
     },
     {
       "path": "packages/ai-chat-ui"
