feat: ai based code completion
Adds a new ai-code-completion Theia extension which provides the
CodeCompletionAgent. The agent is integrated via a
CompletionItemProvider into Monaco for all files.

The extension offers two preferences to enable/disable the feature as
well as control its behavior.

Co-authored-by: Stefan Dirix <sdirix@eclipsesource.com>

--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@theia/ai-chat": "1.49.0",
     "@theia/ai-chat-ui": "1.49.0",
+    "@theia/ai-code-completion": "1.49.0",
     "@theia/ai-core": "1.49.0",
     "@theia/ai-history": "1.49.0",
     "@theia/ai-history-ui": "1.49.0",
