Create initial version of terminal command agent (#115)
https://github.com/eclipsesource/osweek-2024/issues/14

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -76,6 +76,9 @@
       "path": "packages/ai-openai"
     },
     {
+      "path": "packages/ai-terminal"
+    },
+    {
       "path": "packages/bulk-edit"
     },
     {
