--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -30,6 +30,9 @@
       "path": "../../packages/ai-openai"
     },
     {
+      "path": "../../packages/ai-terminal"
+    },
+    {
       "path": "../../packages/bulk-edit"
     },
     {
