--- a/examples/electron/tsconfig.json
+++ b/examples/electron/tsconfig.json
@@ -33,6 +33,9 @@
       "path": "../../packages/ai-openai"
     },
     {
+      "path": "../../packages/ai-terminal"
+    },
+    {
       "path": "../../packages/bulk-edit"
     },
     {
