--- a/examples/electron/tsconfig.json
+++ b/examples/electron/tsconfig.json
@@ -36,6 +36,9 @@
       "path": "../../packages/ai-openai"
     },
     {
+      "path": "../../packages/ai-rag-provider"
+    },
+    {
       "path": "../../packages/ai-terminal"
     },
     {
