--- a/examples/browser/tsconfig.json
+++ b/examples/browser/tsconfig.json
@@ -33,6 +33,9 @@
       "path": "../../packages/ai-openai"
     },
     {
+      "path": "../../packages/ai-rag-provider"
+    },
+    {
       "path": "../../packages/ai-terminal"
     },
     {
