--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -34,6 +34,7 @@
     "@theia/ai-history-ui": "1.52.0",
     "@theia/ai-openai": "1.52.0",
     "@theia/ai-terminal": "1.52.0",
+    "@theia/ai-rag-provider": "1.52.0",
     "@theia/ai-llamafile": "1.52.0",
     "@theia/api-provider-sample": "1.52.0",
     "@theia/api-samples": "1.52.0",
