Project-aware Chat Agent
- add a new agent "TheiaWorkspaceAgent"
- add two tools to read files from workspace and contents from files

--- a/examples/electron/tsconfig.json
+++ b/examples/electron/tsconfig.json
@@ -42,6 +42,9 @@
       "path": "../../packages/ai-terminal"
     },
     {
+      "path": "../../packages/ai-theia-agents"
+    },
+    {
       "path": "../../packages/bulk-edit"
     },
     {
