--- a/tsconfig.json
+++ b/tsconfig.json
@@ -85,6 +85,9 @@
       "path": "packages/ai-terminal"
     },
     {
+      "path": "packages/ai-theia-agents"
+    },
+    {
       "path": "packages/bulk-edit"
     },
     {
