--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -30,6 +30,7 @@
     "@theia/ai-rag-provider": "1.52.0",
     "@theia/ai-terminal": "1.52.0",
     "@theia/ai-llamafile": "1.52.0",
+    "@theia/ai-theia-agents": "1.52.0",
     "@theia/api-provider-sample": "1.52.0",
     "@theia/api-samples": "1.52.0",
     "@theia/bulk-edit": "1.52.0",
