Add PR finalization agent (#124)
Introduces ChatAgent to assist users in creating PRs based on current changes.
The system prompt now asks for the git diff, status, ticket link, and PR template.
Added two variables, #git-status and #git-diff, for capturing status and diff information.
Added the "Invoke PR finalization" command, which opens the chat and sends a predefined message including the git diff and status.
Includes various bug fixes.

Co-authored-by: Lucas Koehler <lkoehler@eclipsesource.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -82,6 +82,9 @@
       "path": "packages/ai-openai"
     },
     {
+      "path": "packages/ai-pr-finalization"
+    },
+    {
       "path": "packages/ai-rag-provider"
     },
     {
