--- a/examples/electron/tsconfig.json
+++ b/examples/electron/tsconfig.json
@@ -39,6 +39,9 @@
       "path": "../../packages/ai-openai"
     },
     {
+      "path": "../../packages/ai-pr-finalization"
+    },
+    {
       "path": "../../packages/ai-rag-provider"
     },
     {
