feat: Ollama integration for Theia AI
Integrates Ollama language models into Theia via the new 'ai-ollama'
package. The endpoint and models can be configured via the preferences.

--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -32,6 +32,7 @@
     "@theia/ai-core": "1.53.0",
     "@theia/ai-history": "1.53.0",
     "@theia/ai-openai": "1.53.0",
+    "@theia/ai-ollama": "1.53.0",
     "@theia/ai-terminal": "1.53.0",
     "@theia/ai-workspace-agent": "1.53.0",
     "@theia/api-provider-sample": "1.53.0",
