--- a/examples/browser-only/package.json
+++ b/examples/browser-only/package.json
@@ -21,6 +21,7 @@
     "@theia/ai-core": "1.53.0",
     "@theia/ai-history": "1.53.0",
     "@theia/ai-openai": "1.53.0",
+    "@theia/ai-ollama": "1.53.0",
     "@theia/api-samples": "1.53.0",
     "@theia/bulk-edit": "1.53.0",
     "@theia/callhierarchy": "1.53.0",
