API for notebook editor playwright tests
Interact with monaco editor inside a cell

Cell execute and get output functionality

Fixed linting errors

Cell Execution count access and test

Install IPython kernel for the playwright job

Download required plug-ins

Fixed failing cell execution count test

Move notebook related plugins to the root package.json

Some clean-ups

--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -8,7 +8,8 @@
       "config": {
         "applicationName": "Theia Browser Example",
         "preferences": {
-          "files.enableTrash": false
+          "files.enableTrash": false,
+          "security.workspace.trust.enabled": false
         },
         "reloadOnReconnect": true
       }
@@ -19,6 +20,7 @@
       }
     }
   },
+  "theiaPluginsDir": "../../plugins",
   "dependencies": {
     "@theia/ai-chat": "1.54.0",
     "@theia/ai-chat-ui": "1.54.0",
