--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,11 +33,18 @@ jobs:
         with:
           python-version: "3.11"
 
+      - name: Install IPython Kernel
+        shell: bash
+        run: |
+          python3 -m pip install ipykernel==6.15.2
+          python3 -m ipykernel install --user
+
       - name: Build Browser
         shell: bash
         run: |
           yarn global add node-gyp
           yarn --skip-integrity-check --network-timeout 100000
+          yarn download:plugins
           yarn browser build
         env:
           NODE_OPTIONS: --max_old_space_size=4096
@@ -51,3 +58,11 @@ jobs:
       - name: Test (playwright)
         shell: bash
         run: yarn --cwd examples/playwright ui-tests-ci
+
+      - name: Archive test results
+        uses: actions/upload-artifact@v4
+        if: ${{ failure() }}
+        with:
+          name: playwright-test-results
+          path: examples/playwright/test-results/
+          retention-days: 2
