Update collaboration libraries after 0.2 release

--- a/packages/collaboration/package.json
+++ b/packages/collaboration/package.json
@@ -9,8 +9,8 @@
     "@theia/monaco": "1.52.0",
     "@theia/monaco-editor-core": "1.83.101",
     "@theia/workspace": "1.52.0",
-    "open-collaboration-protocol": "0.2.0-next.16e7c68",
-    "open-collaboration-yjs": "0.2.0-next.16e7c68",
+    "open-collaboration-protocol": "0.2.0",
+    "open-collaboration-yjs": "0.2.0",
     "socket.io-client": "^4.5.3",
     "yjs": "^13.6.7",
     "lib0": "^0.2.52",
